--- a/src/notebooks/chain.ipynb
+++ b/src/notebooks/chain.ipynb
@@ -24,27 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#import os\n",
-    "#os.environ[\"OPENAI_API_KEY\"] = \"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\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"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\""
+    "\n",
+    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"mettete le vostre api stronzi scrocconi\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"la mamma di morelli ha i baffi\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,116 +44,133 @@
     "from langchain import HuggingFaceHub\n",
     "\n",
     "repo_id = \"google/flan-t5-small\" # See https://huggingface.co/models?pipeline_tag=text-generation&sort=downloads for some other options\n",
-    "repo_id = \"tiiuae/falcon-7b\"\n",
-    "llm = HuggingFaceHub(repo_id=repo_id, model_kwargs={\"temperature\":0, \"max_length\":64})"
+    "#repo_id = \"tiiuae/falcon-7b\"\n",
+    "llm = HuggingFaceHub(repo_id=repo_id, model_kwargs={\"temperature\":0.2, \"max_length\":64})\n",
+    "\n",
+    "llm = OpenAI(temperature=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "HuggingFaceHub(cache=None, verbose=False, callbacks=None, callback_manager=None, client=InferenceAPI(api_url='https://api-inference.huggingface.co/pipeline/text-generation/tiiuae/falcon-7b', task='text-generation', options={'wait_for_model': True, 'use_gpu': False}), repo_id='tiiuae/falcon-7b', task=None, model_kwargs={'temperature': 0, 'max_length': 64}, huggingfacehub_api_token=None)"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following are exerpts from conversations with an AI\n",
+      "assistant. The assistant is a web3 developer experts that extract parameters from text. Here are some\n",
+      "examples: \n",
+      "\n",
+      "\n",
+      "\n",
+      "User: I want to know the wstETH balance of 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\n",
+      "AI: action:balance,token:wstETH,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,chain:Gnosis,amount:100\n",
+      "\n",
+      "\n",
+      "\n",
+      "User: I want to swap 100 XDAI for DAI on Gnosis\n",
+      "AI: action:swap,token1:XDAI,token2:DAI,chain:Gnosis,amount:100\n",
+      "\n",
+      "\n",
+      "\n",
+      "User: I want to send or transfer 100 WETH to 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\n",
+      "AI: action:transfer,token:WETH,chain:Gnosis,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,amount:100\n",
+      "\n",
+      "\n",
+      "\n",
+      "User: I want to swap 100 DAI to USDC on Chiado\n",
+      "AI: action:swap,token1:DAI,token2:USDC,chain:Chiado,amount:100\n",
+      "\n",
+      "\n",
+      "\n",
+      "User: I want to swap 150 BTC to USDC on Gnosis\n",
+      "AI: \n"
+     ]
     }
    ],
-   "source": [
-    "llm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "from langchain.prompts.few_shot import FewShotPromptTemplate\n",
     "from langchain.prompts.prompt import PromptTemplate\n",
     "\n",
     "examples = [\n",
     "  {\n",
-    "    \"question\": \"I want to know the wstETH balance of 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\",\n",
+    "    \"query\": \"I want to know the wstETH balance of 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\",\n",
     "    \"answer\": \"action:balance,token:wstETH,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,chain:Gnosis,amount:100\"\n",
     "  },\n",
     "  {\n",
-    "    \"question\":\"I want to swap 100 XDAI for DAI on Gnosis\",\n",
+    "    \"query\":\"I want to swap 100 XDAI for DAI on Gnosis\",\n",
     "    \"answer\":\"action:swap,token1:XDAI,token2:DAI,chain:Gnosis,amount:100\"\n",
     "  },\n",
     "  {\n",
-    "    \"question\": \"I want to send or transfer 100 WETH to 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\",\n",
+    "    \"query\": \"I want to send or transfer 100 WETH to 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\",\n",
     "    \"answer\":\"action:transfer,token:WETH,chain:Gnosis,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,amount:100\"\n",
     "  },\n",
+    "  {\n",
+    "    \"query\": \"I want to swap 100 DAI to USDC on Chiado\",\n",
+    "    \"answer\":\"action:swap,token1:DAI,token2:USDC,chain:Chiado,amount:100\"\n",
+    "  },\n",
     "  \n",
-    "]"
+    "]\n",
+    "\n",
+    "\n",
+    "example_template = \"\"\"\n",
+    "User: {query}\n",
+    "AI: {answer}\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# create a prompt example from above template\n",
+    "example_prompt = PromptTemplate(\n",
+    "    input_variables=[\"query\", \"answer\"],\n",
+    "    template=example_template\n",
+    ")\n",
+    "\n",
+    "# now break our previous prompt into a prefix and suffix\n",
+    "# the prefix is our instructions\n",
+    "prefix = \"\"\"The following are exerpts from conversations with an AI\n",
+    "assistant. The assistant is a web3 developer experts that extract parameters from text. Here are some\n",
+    "examples: \n",
+    "\"\"\"\n",
+    "\n",
+    "# and the suffix our user input and output indicator\n",
+    "suffix = \"\"\"\n",
+    "User: {query}\n",
+    "AI: \"\"\"\n",
+    "\n",
+    "# now create the few shot prompt template\n",
+    "few_shot_prompt_template = FewShotPromptTemplate(\n",
+    "    examples=examples,\n",
+    "    example_prompt=example_prompt,\n",
+    "    prefix=prefix,\n",
+    "    suffix=suffix,\n",
+    "    input_variables=[\"query\"],\n",
+    "    example_separator=\"\\n\\n\"\n",
+    ")\n",
+    "\n",
+    "query = \"I want to swap 150 BTC to USDC on Gnosis\"\n",
+    "print(few_shot_prompt_template.format(query=query))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question: I want to know the wstETH balance of 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\n",
-      "action:balance,token:wstETH,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,chain:Gnosis,amount:100\n"
-     ]
+     "data": {
+      "text/plain": [
+       "' action:swap,token1:BTC,token2:USDC,chain:Gnosis,amount:150'"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "example_prompt = PromptTemplate(input_variables=[\"question\", \"answer\"], template=\"Question: {question}\\n{answer}\")\n",
-    "\n",
-    "print(example_prompt.format(**examples[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "example_prompt = PromptTemplate(input_variables=[\"question\", \"answer\"], template=\"Question: {question}\\n{answer}\")\n",
-    "\n",
-    "prompt = FewShotPromptTemplate(\n",
-    "    examples=examples, \n",
-    "    example_prompt=example_prompt, \n",
-    "    suffix=\"Question: {input}\", \n",
-    "    input_variables=[\"input\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question: I want to know the wstETH balance of 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\n",
-      "action:balance,token:wstETH,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,chain:Gnosis,amount:100\n",
-      "\n",
-      "Question: I want to swap 100 XDAI for DAI on Gnosis\n",
-      "action:swap,token1:XDAI,token2:DAI,chain:Gnosis,amount:100\n",
-      "\n",
-      "Question: I want to send or transfer 100 WETH to 0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92 on Gnosis\n",
-      "action:transfer,token:WETH,chain:Gnosis,address:0xFe8e15ae884524eFfc2fe91dF6f5BA40D8533A92,amount:100\n",
-      "\n",
-      "Question: I want to swap 100 DAI to USDC on UniSwap\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(prompt.format(input=\"I want to swap 100 DAI to USDC on UniSwap\"))\n"
+    "llm(few_shot_prompt_template.format(query=query))"
    ]
   }
  ],
